chore(thesis): rewrite chapter 5

--- a/src/nomenclature/Index.tex
+++ b/src/nomenclature/Index.tex
@@ -2,6 +2,7 @@
 \nomenclature{CI}{Continuous Integration}
 \nomenclature{CD}{Continuous Deployment}
 \nomenclature{CI/CD}{Continuous Integration and Continuous Deployment}
+\nomenclature{GH}{GitHub}
 \nomenclature{GHA}{GitHub Actions}
 \nomenclature{VM}{Virtual Machine}
 \nomenclature{HTTP}{Hypertext Transfer Protocol}
