--- a/src/abstract/00_Abstract.tex
+++ b/src/abstract/00_Abstract.tex
@@ -1,42 +1,49 @@
 \begin{abstract}
 	This thesis explores the comparative use of functional package management and
-	containerization technologies, focusing on their applicability to development
-	environments and software deployment. The motivation behind this research is the
-	increasing need for reproducible, efficient, and scalable software environments in
-	modern development workflows. As organizations scale and applications become more
-	complex, choosing the right tools for managing development and deployment processes
-	becomes critical.
+	containerization technologies, focusing on their applicability in development
+	environments and software deployment. As software projects scale and grow more
+	complex, the need for reproducible, efficient, and scalable environments has
+	become critical for modern workflows. Selecting the appropriate tools for
+	managing these environments can significantly impact development productivity
+	and deployment performance.
 
-	The core research question investigated is how Nix, a functional package manager,
-	and Docker, a containerization platform, compare in terms of efficiency, scalability,
-	and reproducibility in different software development and deployment contexts. The
-	thesis seeks to determine which tool is more suited for specific use cases, such as
-	small-scale, self-hosted environments versus large-scale, high-traffic applications.
-	Through an empirical evaluation of development workflows and deployment models,
-	the research highlights key differences in how each tool handles package isolation,
-	process isolation, scalability, and infrastructure management.
+	The research compares functional package management and containerization
+	in terms of efficiency, scalability, and reproducibility across different
+	contexts, ranging from small-scale, self-hosted environments to large-scale,
+	high-traffic applications. It highlights how these technologies manage package
+	isolation, process isolation, and dynamic scaling, illustrating their strengths
+	and trade-offs in development and deployment workflows.
 
-	Methodologically, the research was conducted through hands-on experimentation with
-	both Docker and Nix, comparing their performance in setting up reproducible
-	development environments and deploying software. The study also analyzed the use
-	of binary caches and declarative environments in Nix, as well as Docker's
-	container-based isolation and scalability with orchestration tools like Kubernetes.
+	The findings demonstrate that functional package management is highly effective
+	in creating reproducible and efficient development environments. By enabling
+	precise control over dependencies, it minimizes configuration drift and friction
+	during development, making it particularly beneficial for self-hosted servers, 
+  personal desktops and stable traffic environments. 
+  This approach also excels in deployments where
+	resource efficiency is prioritized over dynamic scaling, offering a simpler
+	solution without requiring complex orchestration.
 
-	The findings suggest that Nix is highly effective for setting up reproducible
-	development environments and is particularly beneficial for small-scale deployments
-	where traffic is predictable and resources are limited. Docker, on the other hand,
-	excels in large-scale deployments and high-traffic applications due to its
-	scalability and flexibility in dynamic environments. Despite Docker's advantages
-	in scaling, Nix's use for development environments remains valuable even in larger
-	projects due to its time-saving benefits and reduced friction in managing dependencies.
+	Conversely, containerization proves advantageous in large-scale, distributed
+	applications where dynamic scalability is essential. The technology's ability
+	to isolate services and leverage orchestration tools makes it ideal for handling
+	fluctuating traffic demands, microservice architectures, and cloud-native
+	environments. However, in development environments, containerization can
+	introduce unnecessary overhead and complexity, where functional package management
+	would be a more efficient choice.
 
-	The implications of this research extend to both practice and academic study.
-	Practitioners can leverage the findings to better choose tools based on the specific
-	needs of their projects, whether prioritizing reproducibility or scalability. From
-	an academic perspective, this thesis contributes to the growing body of research
-	on software deployment and environment management, suggesting areas where further
-	integration between functional package management and containerization technologies
-	could be explored.
+	An important recommendation of this thesis is to prioritize functional package
+	management for development environments due to its streamlined setup and resource
+	efficiency. Startups and organizations should evaluate their deployment needs,
+	opting for containerized solutions only when scalability and service orchestration
+	are critical, while leveraging functional package management for simpler and
+	more predictable workloads.
+
+	The implications of this research are relevant for both practitioners and academic
+	inquiry, offering insights into selecting the appropriate technologies based on
+	specific project needs. It also opens up avenues for exploring hybrid solutions
+	that combine the reproducibility of functional package management with the
+	scalability of containerization, presenting an opportunity for future integration
+	and innovation in software deployment strategies.
 \end{abstract}
 
 \cleardoublepage
