chore(thesis): update bib

--- a/lib/bib/BibtexDatabase.bib
+++ b/lib/bib/BibtexDatabase.bib
@@ -4,19 +4,6 @@
   urldate = {2024-09-10}
 }
 
-@misc{aleksicPodmanVsDocker2023,
-  title = {Podman vs {{Docker}}: {{In-Depth Comparison}}},
-  shorttitle = {Podman vs {{Docker}}},
-  author = {Aleksic, Marko},
-  year = {2023},
-  month = dec,
-  journal = {Knowledge Base by phoenixNAP},
-  url = {https://phoenixnap.com/kb/podman-vs-docker},
-  urldate = {2024-09-15},
-  abstract = {Podman and Docker are two OCI compliant container management tools. Read this article to learn about their similarities and differences.},
-  langid = {american}
-}
-
 @article{API2024,
   title = {{{API}}},
   year = {2024},
@@ -728,47 +715,29 @@
   langid = {english}
 }
 
-@misc{NixBetterDocker2024,
-  title = {Nix Is a Better {{Docker}} Image Builder than {{Docker}}'s Image Builder},
-  year = {2024},
-  month = may,
-  url = {https://xeiaso.net//talks/2024/nix-docker-build/},
-  urldate = {2024-05-28},
-  abstract = {Xe Iaso's personal website.},
-  langid = {english}
-}
-
-@misc{NixDevelopNix,
-  title = {Nix Develop - {{Nix Reference Manual}}},
-  url = {https://nix.dev/manual/nix/2.18/command-ref/new-cli/nix3-develop},
-  urldate = {2024-09-19}
-}
-
-@misc{NixDockerBoth2023a,
-  title = {Nix, {{Docker}} - or Both?},
-  year = {2023},
-  month = dec,
-  journal = {Numtide},
-  url = {https://numtide.com/blog/nix-docker-or-both/},
-  urldate = {2024-05-28},
-  abstract = {"It worked on my machine!" Most of us who've worked in IT for any length of time have heard this complaint. You develop your software, you test it exhaustively. It looks great. Then you deploy it into production and it crashes. And the blame game starts. Why does this happen?},
-  langid = {english}
-}
-
-@misc{NixLanguageNixa,
-  title = {Nix {{Language}} - {{Nix Reference Manual}}},
-  url = {https://nix.dev/manual/nix/2.18/language/},
-  urldate = {2024-05-31}
-}
-
 @misc{NixNixOSDeclarative,
   title = {Nix \& {{NixOS}} {\textbar} {{Declarative}} Builds and Deployments},
   url = {https://nixos.org/},
   urldate = {2024-06-20}
 }
 
-@misc{NixshellNixReference,
+@misc{nixosfoundationNixDevelopNix,
+  title = {Nix Develop - {{Nix Reference Manual}}},
+  author = {NixOS Foundation},
+  url = {https://nix.dev/manual/nix/2.18/command-ref/new-cli/nix3-develop},
+  urldate = {2024-09-19}
+}
+
+@misc{nixosfoundationNixLanguageNix,
+  title = {Nix {{Language}} - {{Nix Reference Manual}}},
+  author = {NixOS Foundation},
+  url = {https://nix.dev/manual/nix/2.18/language/},
+  urldate = {2024-05-31}
+}
+
+@misc{nixosfoundationNixshellNixReference,
   title = {Nix-Shell - {{Nix Reference Manual}}},
+  author = {NixOS Foundation},
   url = {https://nix.dev/manual/nix/2.18/command-ref/nix-shell},
   urldate = {2024-09-19}
 }
@@ -828,13 +797,6 @@
   urldate = {2024-09-10},
   abstract = {The phrase ``It works on my machine'' has become a notorious, almost clich{\'e}d line that developers and testers often encounter. This seemingly{\dots}},
   langid = {english}
-}
-
-@misc{perkinsRevolutionizingMyDaily2022,
-  title = {Revolutionizing My Daily Development with {{Nix}}},
-  author = {Perkins, Luk},
-  year = {2022},
-  publisher = {NixCon}
 }
 
 @misc{PersistingContainerData0200,
@@ -928,17 +890,6 @@
   urldate = {2024-09-15},
   abstract = {Red Hat is the world's leading provider of enterprise open source solutions, including high-performing Linux, cloud, container, and Kubernetes technologies.},
   langid = {english}
-}
-
-@misc{replitReplitWillNix2021,
-  title = {Replit --- {{Will Nix Overtake Docker}}?},
-  author = {Replit},
-  year = {2021},
-  month = nov,
-  journal = {Replit Blog},
-  url = {https://blog.replit.com/nix-vs-docker},
-  urldate = {2024-05-28},
-  abstract = {In many discussions about Nix, the comparison of Nix and Docker comes up frequently. This question could be dismissed by saying that Nix and Docker are different tools that solve different problems. One is a toolkit for building and deploying containers and the other is a package and configuration manager. However, these tools do have some overlap: they can both be used to create reproducible environments. A reproducible environment is one that can be recreated from scratch in an identical way (ideally bit-for-bit). Practically, this means having the same tools, versions, and configuration between the environments. Reproducible environments are useful to ensure all developers on a project have the exact same set of tools. Additionally, you can develop in an environment that is similar to the production environment -- leading to less surprises when deploying. Both tools can solve the age-old problem of "it works on my machine". While both tools aim to solve this problem, they take different approaches.}
 }
 
 @misc{RustProgrammingLanguage,
@@ -1085,15 +1036,6 @@
   langid = {english}
 }
 
-@misc{WhyDidDocker,
-  title = {Why Did {{Docker}} Become so Popular When a More Robust and Mathematically Immutable Method via {{NixOS}}' {{Nix}} Packaging Is out There?},
-  journal = {Quora},
-  url = {https://www.quora.com/Why-did-Docker-become-so-popular-when-a-more-robust-and-mathematically-immutable-method-via-NixOS-Nix-packaging-is-out-there},
-  urldate = {2024-05-28},
-  abstract = {Answer (1 of 3): Immutability of images is not the only component of Docker. There are many immutable distribution mechanisms, going back far older than Linux. It is not a new concept. Nix brings a number of features to Linux systems, but immutability is not really a signal feature. You will not...},
-  langid = {english}
-}
-
 @article{WindowsSubsystemLinux2024,
   title = {Windows {{Subsystem}} for {{Linux}}},
   year = {2024},
@@ -1105,18 +1047,6 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1245669237}
-}
-
-@misc{yagisNixDocker2021,
-  title = {Nix or {{Docker}}?},
-  author = {Ya{\u g}{\i}{\c s}, Mehmet Yavuz},
-  year = {2021},
-  month = jan,
-  journal = {Medium},
-  url = {https://mehmetyavuzyagis.medium.com/nix-or-docker-db1dc667f404},
-  urldate = {2024-05-28},
-  abstract = {Two Different Approaches, Two Different Solutions, One Problem At Hand.},
-  langid = {english}
 }
 
 @misc{YouAreMost2018,
