chore(thesis): update author

--- a/lib/preambel/preambel-commands.tex
+++ b/lib/preambel/preambel-commands.tex
@@ -113,7 +113,7 @@
 			In accordance with the recommendation of
 			the German Research Foundation (DFG - Deutsche Forschungsgemeinschaft)\footnote{DFG Formulates Guidelines for Dealing with Generative Models for Text and Image Creation: \url{https://www.dfg.de/en/news/news-topics/announcements-proposals/2023/info-wissenschaft-23-72}}
 			and that of the journal Theoretical Computer Science\footnote{Declaration of generative AI in scientific writing: \url{https://www.sciencedirect.com/journal/theoretical-computer-science/publish/guide-for-authors}}
-			I (the author) herby declare the use of generative AI.
+			I, Clemens Horn, herby declare the use of generative AI.
 
 			During the preparation of this work I used
 			\declareUseOfGenerativeAITool\ in order to improve readability and language, only.
